tests/error/type_errors/call_wrong_arg.py
from guppylang.decorator import guppy


@guppy(compile=True)
def foo(x: int) -> int:
    return foo(True)
